--- a/{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/templates/index.html
+++ b/{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% raw %}{% extends 'base.html' %}
 
 {% block content %}
 
@@ -9,3 +9,4 @@
 </div>
 
 {% endblock %}
+{% endraw %}
