--- a/{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/templates/base.html
+++ b/{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/templates/base.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="{% url 'home' %}">
-            {{ cookiecutter.project_name }}
+            {% endraw %}{{ cookiecutter.project_name }}{% raw %}
           </a>
         </div>
       </div>
