--- a/{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/templates/index.html
+++ b/{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/templates/index.html
@@ -2,11 +2,6 @@
 
 {% block content %}
 
-<h1>Do something awesome!</h1>
+<h1>Welcome, time to do something awesome!</h1>
 
-<div class="alert alert-warning">
-	Have you set your <code>DATABASE_URL</code> and <code>SECRET_KEY</code> environment variables?
-</div>
-
-{% endblock %}
-{% endraw %}
+{% endblock %}{% endraw %}
